--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@alpinejs/mask": "^3.13.2",
         "@ckeditor/ckeditor5-alignment": "^39.0.2",
         "@ckeditor/ckeditor5-build-classic": "^39.0.2",
+        "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
         "alpinejs": "^3.13.0",
         "chart.js": "^4.4.1",
         "flowbite": "^1.8.1",
